--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNoljXG5O9j01GNS2bU/gUm",
+      "authorship_tag": "ABX9TyPZVu8jJTpG5NADJPARs6v2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,13 @@
         "id": "Km4SdvVkKAuN"
       },
       "source": [
-        ""
+        "def sumatoria_1(A,B,C):\n",
+        "  \n",
+        "  n = len(A)\n",
+        "  acumulador=0\n",
+        "  for i in range(n):\n",
+        "    d = A[i]*B[i]\n",
+        "    e = "
       ],
       "execution_count": null,
       "outputs": []
