Creado mediante Colaboratory

--- a/py3_ciclos.ipynb
+++ b/py3_ciclos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "py3-ciclos",
       "provenance": [],
-      "authorship_tag": "ABX9TyOiU0t914MboCi+7iiFaHSu",
+      "authorship_tag": "ABX9TyP9ed/I7IEG4B6weVJi7NaK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,12 @@
         "id": "V1XLqQxyP5Z8"
       },
       "source": [
-        ""
+        "def llena_lista(A,B):\n",
+        "  \n",
+        "  n=len(A)//2\n",
+        "  C=[]\n",
+        "  for i in range(n):\n",
+        "    d = \n"
       ],
       "execution_count": null,
       "outputs": []
