Creado mediante Colaboratory

--- a/py3_ciclos.ipynb
+++ b/py3_ciclos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "py3-ciclos",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9ed/I7IEG4B6weVJi7NaK",
+      "authorship_tag": "ABX9TyMm+8/8NNVh8GcLVoAYOPSg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,50 @@
         "  n=len(A)//2\n",
         "  C=[]\n",
         "  for i in range(n):\n",
-        "    d = \n"
+        "    d = (A[i+1])**2\n",
+        "    e = d*B[2*i]\n",
+        "    f = e+B[n+i]\n",
+        "    C.append(f)\n",
+        "  return C\n"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HxH_ifhhXKqG",
+        "outputId": "4bd88f6e-0e26-4b4c-8f9f-77b2dddb3b9f"
+      },
+      "source": [
+        "A=[2,4,6,8]\n",
+        "B=[3,5,7,9]\n",
+        "llena_lista(A,B)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[55, 261]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uEtMk_doXzkO"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
