Creado mediante Colaboratory

--- a/py3_ciclos.ipynb
+++ b/py3_ciclos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "py3-ciclos",
       "provenance": [],
-      "authorship_tag": "ABX9TyMm+8/8NNVh8GcLVoAYOPSg",
+      "authorship_tag": "ABX9TyNJ+FAcnqfseG0gGSVmmBHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,13 +153,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uEtMk_doXzkO"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "id": "uEtMk_doXzkO",
+        "outputId": "4e9a2d7d-85f3-4415-b1e8-bb34ab6e839c"
       },
       "source": [
-        ""
+        "[(( )**2 * ) + ]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-fc3b32d708b7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [(( )**2 * ) + ]\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
