--- a/py3_ciclos.ipynb
+++ b/py3_ciclos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "py3-ciclos",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJ+FAcnqfseG0gGSVmmBHs",
+      "authorship_tag": "ABX9TyOn3OUkAb87Yf9HQ/Mum1Y6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "  resultado= acumulador + n**2 \n",
         "  return resultado\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "C=[2,0,5,4]\n",
         "sumatoria(A,B,C)\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -88,7 +88,7 @@
       "source": [
         "((3*1)+2 + (5*4)+0 + (7*6)+5 + (9*8)+4)+4**2"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
         "    C.append(f)\n",
         "  return C\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
         "B=[3,5,7,9]\n",
         "llena_lista(A,B)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,24 +154,25 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uEtMk_doXzkO",
-        "outputId": "4e9a2d7d-85f3-4415-b1e8-bb34ab6e839c"
+        "outputId": "a07c6597-0699-43c1-e064-0a1490e721bc"
       },
       "source": [
-        "[(( )**2 * ) + ]"
+        "[(( 2)**2 * 3) + 9]"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-fc3b32d708b7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [(( )**2 * ) + ]\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[21]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
