--- a/py3_ciclos.ipynb
+++ b/py3_ciclos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "py3-ciclos",
       "provenance": [],
-      "authorship_tag": "ABX9TyOn3OUkAb87Yf9HQ/Mum1Y6",
+      "authorship_tag": "ABX9TyNWVoXV+pHm7CtyPhClat+V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "  resultado= acumulador + n**2 \n",
         "  return resultado\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YjzMHRb1Nsxt",
-        "outputId": "ec93b54d-f1ab-4126-8beb-781e4768f0e0"
+        "outputId": "26e50b4a-81c0-4b03-ca86-97a3a6cfdaeb"
       },
       "source": [
         "A=[3,5,7,9]\n",
@@ -62,7 +62,7 @@
         "C=[2,0,5,4]\n",
         "sumatoria(A,B,C)\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
     },
@@ -162,7 +162,7 @@
       "source": [
         "[(( 2)**2 * 3) + 9]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -173,6 +173,38 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "135G008nJMq3",
+        "outputId": "9838671a-ebab-422e-db44-0cceefb10bd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "A=[2,3,4]\n",
+        "B=[5,1,6]\n",
+        "C=[7,8,9]\n",
+        "\n",
+        "n=len(A)\n",
+        "\n",
+        "sum(((A[i]*B[i])+C[i]) for i in range(n))+n**2\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "70"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     }
