--- a/py3_ciclos.ipynb
+++ b/py3_ciclos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "py3-ciclos",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjX7NT9x28f87cqVQtfgyA",
+      "authorship_tag": "ABX9TyP17/DQ/hdg8MZllMgp/RGw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "  resultado= acumulador + n**2 \n",
         "  return resultado\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "C=[2,0,5,4]\n",
         "sumatoria(A,B,C)\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,35 +183,66 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "135G008nJMq3",
-        "outputId": "9838671a-ebab-422e-db44-0cceefb10bd9"
+        "outputId": "8529b82a-ec89-4006-a8aa-fb35281af8d6"
       },
       "source": [
-        "A=[2,3,4]\n",
-        "B=[5,1,6]\n",
-        "C=[7,8,9]\n",
+        "A=[3,5,7,9]\n",
+        "B=[1,4,6,8]\n",
+        "C=[2,0,5,4]\n",
         "\n",
         "n=len(A)\n",
         "\n",
         "sum(((A[i]*B[i])+C[i]) for i in range(n))+n**2\n"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "70"
+              "164"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qgxGIG7FMtU7"
+        "id": "qgxGIG7FMtU7",
+        "outputId": "468f6da8-a98b-4a6d-b2ae-fad1b693429b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "A=[2,4,6,8]\n",
+        "B=[3,5,7,9]\n",
+        "\n",
+        "n=len(A)//2\n",
+        "\n",
+        "[((A[i+1])**2 *B[2*i])+B[n+i] for i in range(n)]"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[55, 261]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BwuLUhK6cbbr"
       },
       "source": [
         ""
