Creado mediante Colaboratory

--- a/Retos_Python.ipynb
+++ b/Retos_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Retos-Python",
       "provenance": [],
-      "authorship_tag": "ABX9TyNmYUNo4vVGxMDEVbcXJYJV",
+      "authorship_tag": "ABX9TyNeVtJMdzCdCNt/5ARKxakA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "#Reto 6 \n",
+        "\n"
       ]
     }
   ]
