Creado mediante Colaboratory

--- a/Retos_Python.ipynb
+++ b/Retos_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Retos-Python",
       "provenance": [],
-      "authorship_tag": "ABX9TyNeVtJMdzCdCNt/5ARKxakA",
+      "authorship_tag": "ABX9TyMWjXjP0rxla1y37vFsUa9p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,66 @@
         "#Reto 6 \n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 8\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "M-C6u5ueNVhK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 9\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "PwvToGELNV6-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 13\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xBATs9CwNWJC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 17 \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_L_5GC1gNWWE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 27 \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "H1jmk4xBNWyo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
