Creado mediante Colaboratory

--- a/Retos_Python.ipynb
+++ b/Retos_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Retos-Python",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWjXjP0rxla1y37vFsUa9p",
+      "authorship_tag": "ABX9TyPWrcb+xi7XH0dRNqMeWELv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,51 +29,157 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "ZIco_yNlVeB_"
+        "id": "ZIco_yNlVeB_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d38098a3-e383-46e7-9408-000d2bdf2d55"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 12, 14, 16, 18, 20]\n"
+          ]
+        }
+      ],
       "source": [
-        "#Reto 6 \n",
-        "\n"
+        "#Reto 8 \n",
+        "#No se vio la solución \n",
+        "\n",
+        "print([2*i+10 for i in range(6)])\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Reto 8\n",
-        "\n"
+        "#Reto 6\n",
+        "#No se vio la solución\n",
+        "\n",
+        "import random \n",
+        "\n",
+        "x=random.randint(0, 120)\n",
+        "\n",
+        "print('El numero generado fue:', x )\n",
+        "\n",
+        "if 10 <= x <= 50:\n",
+        "  print(x, 'Esta en un intervalo de 10 a 50') \n",
+        "\n",
+        "elif x < 10:\n",
+        "  print(x,'Es menor a 10')\n",
+        "\n",
+        "elif 50 < x <= 100:\n",
+        "  print(x, 'Esta en un intervalo entre 50 a 100')\n",
+        "\n",
+        "else: \n",
+        "  print(x, 'Es mayor a 100')\n"
       ],
       "metadata": {
-        "id": "M-C6u5ueNVhK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M-C6u5ueNVhK",
+        "outputId": "43fe9411-8e1c-48a1-ab89-d0b1d9ecc32f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El numero generado fue: 44\n",
+            "44 Esta en un intervalo de 10 a 50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#Reto 9\n",
+        "#No se vio la solución\n",
+        "\n",
+        "inicio= 0\n",
+        "final= 50\n",
+        "variacion= 5\n",
+        "suma=0\n",
+        "\n",
+        "for i in range(inicio,final,variacion):\n",
+        "  suma= suma + i\n",
+        "  print(i)\n",
+        "\n",
+        "print('El resultado es: ', suma)\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "PwvToGELNV6-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PwvToGELNV6-",
+        "outputId": "02d34446-6682-440f-a832-363dabb40b94"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "5\n",
+            "10\n",
+            "15\n",
+            "20\n",
+            "25\n",
+            "30\n",
+            "35\n",
+            "40\n",
+            "45\n",
+            "El resultado es:  225\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#Reto 13\n",
-        "\n"
+        "# No se vio la solución\n",
+        "\n",
+        "print('Ingrese el primer numero: ')\n",
+        "x= int(input())\n",
+        "\n",
+        "print('Ingrese el segundo numero: ')\n",
+        "y= int(input())\n",
+        "\n",
+        "media=(x+y)/2\n",
+        "\n",
+        "print('La media de los valores ingresados es: ', media)\n"
       ],
       "metadata": {
-        "id": "xBATs9CwNWJC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xBATs9CwNWJC",
+        "outputId": "fe93da4f-1568-45b4-b936-13c7a5aa338e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer numero: \n",
+            "4\n",
+            "Ingrese el segundo numero: \n",
+            "80\n",
+            "La media de los valores ingresados es:  42.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
