Creado mediante Colaboratory

--- a/Retos_Python.ipynb
+++ b/Retos_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Retos-Python",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWrcb+xi7XH0dRNqMeWELv",
+      "authorship_tag": "ABX9TyMDTk3jnTwONhVRt7syHMOi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,6 +122,27 @@
       "cell_type": "code",
       "source": [
         "#Reto 17 \n",
+        "#No se vio la solución\n",
+        "\n",
+        "import random \n",
+        "\n",
+        "x= random.randint(1,100)\n",
+        "\n",
+        "print('Ingrese el numero que cree es la respuesta: ')\n",
+        "num= int(input())\n",
+        "\n",
+        "while num!= x:\n",
+        "\n",
+        "  if num > x:\n",
+        "    print('El numero es menor, siga intentando: ')\n",
+        "    num= int(input())\n",
+        "  \n",
+        "  elif num < x:\n",
+        "    print('El numero es mayor, siga intentando: ')\n",
+        "    num= int(input())\n",
+        "  \n",
+        "  if num == x:\n",
+        "    print('¡ACERTASTE!, el numero era' , x)\n",
         "\n"
       ],
       "metadata": {
@@ -134,10 +155,80 @@
       "cell_type": "code",
       "source": [
         "#Reto 27 \n",
-        "\n"
+        "#Se vio la solución \n",
+        "\n",
+        "import random \n",
+        "\n",
+        "L=random.sample(range(100),10)\n",
+        "\n",
+        "print(L)\n",
+        "L.sort()\n",
+        "\n",
+        "print(L)\n",
+        "\n",
+        "print('El numero mayor de la lista es: ', L[9])\n",
+        "print('El numero menor de la lista es: ', L[0])\n"
       ],
       "metadata": {
         "id": "H1jmk4xBNWyo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 10\n",
+        "#Se vio la solución\n",
+        "\n",
+        "x=1\n",
+        "L=[1]\n",
+        "\n",
+        "for i in range(1,64):\n",
+        "  x=x*2\n",
+        "  L.append(x)\n",
+        "print('La respuesta es: ', str(sum(L)))\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "feVJ-tQBx02I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 15 \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EYA_po0ix2hw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 20\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vxW2Hnpix5-k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reto 26\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "092Eohq7x9-6"
       },
       "execution_count": null,
       "outputs": []
