--- a/Retos_Python.ipynb
+++ b/Retos_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Retos-Python",
       "provenance": [],
-      "authorship_tag": "ABX9TyMDTk3jnTwONhVRt7syHMOi",
+      "authorship_tag": "ABX9TyOKHQz+uOmiMHY8Sj7S2IIQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,8 +200,21 @@
       "cell_type": "code",
       "source": [
         "#Reto 15 \n",
+        "#No se vio la solución\n",
         "\n",
-        "\n"
+        "num=[]\n",
+        "x=0\n",
+        "\n",
+        "while (x < 1):\n",
+        "  print('Ingrese la cantidad de numeros: ')\n",
+        "  x=int(input())\n",
+        "\n",
+        "for i in range(x):\n",
+        "  print('Ingrese un numero: ')\n",
+        "  y=int(input())\n",
+        "  num.append(y)\n",
+        "\n",
+        "print('La media de los numeros es: ', sum(num)/x)\n"
       ],
       "metadata": {
         "id": "EYA_po0ix2hw"
@@ -213,7 +226,20 @@
       "cell_type": "code",
       "source": [
         "#Reto 20\n",
-        "\n"
+        "#Se vio la solución \n",
+        "\n",
+        "def bisiesto(x):\n",
+        "\n",
+        "  if x%4==0 and (not(x%100==0) or x%400==0 ):\n",
+        "    print('Este año es bisiesto')\n",
+        "\n",
+        "  else:\n",
+        "    print('Este año no es bisiesto')\n",
+        "  \n",
+        "print('Ingrese un año entre 1600 y 2400: ')\n",
+        "x=int(input())\n",
+        "\n",
+        "print(x, bisiesto(x))\n"
       ],
       "metadata": {
         "id": "vxW2Hnpix5-k"
@@ -225,6 +251,7 @@
       "cell_type": "code",
       "source": [
         "#Reto 26\n",
+        "\n",
         "\n"
       ],
       "metadata": {
