Creado mediante Colaboratory

--- a/Retos_Python.ipynb
+++ b/Retos_Python.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Retos-Python",
       "provenance": [],
-      "authorship_tag": "ABX9TyOKHQz+uOmiMHY8Sj7S2IIQ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPth+qoCYamZ8Q2iOL4I6LR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -199,7 +200,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Reto 15 \n",
+        "5#Reto 15 \n",
         "#No se vio la solución\n",
         "\n",
         "num=[]\n",
@@ -231,10 +232,14 @@
         "def bisiesto(x):\n",
         "\n",
         "  if x%4==0 and (not(x%100==0) or x%400==0 ):\n",
-        "    print('Este año es bisiesto')\n",
-        "\n",
+        "  \n",
+        "    t='Es bisiesto'\n",
+        "    \n",
         "  else:\n",
-        "    print('Este año no es bisiesto')\n",
+        "  \n",
+        "    t='No es bisiesto'\n",
+        "\n",
+        "  return t\n",
         "  \n",
         "print('Ingrese un año entre 1600 y 2400: ')\n",
         "x=int(input())\n",
@@ -242,17 +247,45 @@
         "print(x, bisiesto(x))\n"
       ],
       "metadata": {
-        "id": "vxW2Hnpix5-k"
+        "id": "vxW2Hnpix5-k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4bdd353-de78-4c0d-82b6-c118b2dd6462"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un año entre 1600 y 2400: \n",
+            "2000\n",
+            "2000 Es bisiesto\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#Reto 26\n",
+        "#Se vio la solución\n",
         "\n",
-        "\n"
+        "import random\n",
+        "\n",
+        "x= random.randint(1000000, 2000001)\n",
+        "print (x)\n",
+        "\n",
+        "x=str(x)\n",
+        "par=0\n",
+        "\n",
+        "for i in x:\n",
+        "  if int(i)%2==0:\n",
+        "    par+=1\n",
+        "\n",
+        "print('Hay', par , 'cifra/s par/es en este', x ,'numero')\n",
+        "print('Hay', 7-par , 'cifra/s impar/es en este', x ,'numero')\n"
       ],
       "metadata": {
         "id": "092Eohq7x9-6"
